--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.07    2011-03-18
+
+	Change graphical device used from bmp to tiff (compatible with MacOS)
+	Change a dir check to dirname check
+
 0.06	2011-03-11
 
 	Changed the perl version requested in Build.PL to 5.8.0
