--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.08	2011-03-21
+
+	Change in the version of File::Path requested. 
+        make_path and remove_tree are available from version 2.07
+
 0.07    2011-03-18
 
 	Change graphical device used from bmp to tiff (compatible with MacOS)
